--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic-native/toast": "^4.5.3",
+    "@ionic/pro": "^1.0.19",
     "@ionic/storage": "2.1.3",
     "cordova-android": "^7.0.0",
     "cordova-plugin-device": "^1.1.4",
@@ -48,7 +49,7 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.8",
+    "@ionic/app-scripts": "^3.1.8",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
