--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/keyboard": "^4.5.3",
     "@ionic-native/media": "^4.5.3",
     "@ionic-native/native-audio": "^4.5.3",
+    "@ionic-native/native-keyboard": "^4.5.3",
     "@ionic-native/native-storage": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
@@ -32,8 +34,10 @@
     "@ionic/pro": "^1.0.19",
     "@ionic/storage": "2.1.3",
     "cordova-android": "^7.0.0",
+    "cordova-plugin-add-swift-support": "^1.7.1",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-fingerprint-aio": "^1.3.4",
     "cordova-plugin-ionic": "^3.1.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-media": "^5.0.2",
@@ -43,7 +47,7 @@
     "cordova-plugin-whitelist": "1.3.1",
     "cordova-plugin-x-toast": "^2.6.0",
     "ionic-angular": "3.9.2",
-    "ionic-plugin-keyboard": "~2.2.1",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
